@@ -50,11 +50,19 @@ differing country codes.
 
 </para>
 
-</footnote>, you will next be asked to select a country.
-If you choose <guimenuitem>Other</guimenuitem> at the bottom of the list,
-you will be presented with a list of all countries, grouped by continent.
+</footnote>, you will be shown a list of only those countries. To select a
+country that is not in that list, choose <guimenuitem>Other</guimenuitem>
+(the last option). You will be then be presented with a list of continents;
+selecting a continent will lead to a list of relevant countries on that
+continent.
+
+</para><para>
+
 If the language has only one country associated with it, that country
-will be selected automatically.
+will be selected automatically. In that case it is only possible to select
+a different country by first lowering the debconf priority to medium,
+followed by revisiting the language selection option in the main menu of
+the installer.
 
 </para><para>
 
