@@ -6,8 +6,10 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
 
   [ Frans Pop ]
   * Update copyright to 2008.
+  * Update description of country selection in line with recent changes in
+    localechooser.
 
- -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 22:13:01 +0200
+ -- Frans Pop <fjp@debian.org>  Thu, 29 May 2008 22:44:03 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
